Checkpoint 1 sentence feeding

--- a/notebooks/deliver/bawe_data_extraction.ipynb
+++ b/notebooks/deliver/bawe_data_extraction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "humanitarian-mexican",
+   "id": "visible-yellow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-empty",
+   "id": "experienced-notification",
    "metadata": {},
    "source": [
     "# Extracting the British Academic Written English Corpus\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recovered-treasury",
+   "id": "banner-membrane",
    "metadata": {},
    "source": [
     "## Instructions\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "increased-brief",
+   "id": "magnetic-rescue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +95,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bizarre-agenda",
+   "id": "residential-transmission",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|##########| 2577/2577 [00:00<00:00, 7049.24it/s]\n"
+      "100%|##########| 2577/2577 [00:00<00:00, 6550.34it/s]\n"
      ]
     },
     {
@@ -240,213 +240,42 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "permanent-pharmaceutical",
+   "id": "stuffed-marble",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counting sentences...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|##########| 2577/2577 [11:14<00:00,  3.82it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Counting sentences...', flush=True)\n",
-    "sentence_counts = [len(list(nlp(text).sents)) for text in tqdm(df['text'])]"
+    "# print('Counting sentences...', flush=True)\n",
+    "# sentence_counts = [len(list(nlp(text).sents)) for text in tqdm(df['text'])]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "promotional-crime",
+   "id": "general-territory",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Author count: 620\n",
-      "Sentence count: 296921\n",
-      "Minimum sentence count: 16\n",
-      "Maximum sentence count: 1042\n",
-      "Average sentence count: 115.21963523476911\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>author</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>text</th>\n",
-       "      <th>sentence_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>Racism is still a problem within our society t...</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>b</td>\n",
-       "      <td>Official statistics are those produced by eith...</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>c</td>\n",
-       "      <td>Since the fourteenth century the practice of m...</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>d</td>\n",
-       "      <td>Much more reproductive choice is now available...</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>a</td>\n",
-       "      <td>Victorian notions of women's madness were larg...</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2572</th>\n",
-       "      <td>6998</td>\n",
-       "      <td>a</td>\n",
-       "      <td>E. Warwick Slinn describes dramatic monologue ...</td>\n",
-       "      <td>149</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2573</th>\n",
-       "      <td>6998</td>\n",
-       "      <td>b</td>\n",
-       "      <td>Hugh Blair voices an attack on the practices o...</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2574</th>\n",
-       "      <td>6998</td>\n",
-       "      <td>c</td>\n",
-       "      <td>'The first thing to remember about Donne,' wri...</td>\n",
-       "      <td>115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2575</th>\n",
-       "      <td>6998</td>\n",
-       "      <td>d</td>\n",
-       "      <td>Susan Wiseman calculated that the latest possi...</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2576</th>\n",
-       "      <td>6998</td>\n",
-       "      <td>e</td>\n",
-       "      <td>Ibsen's Hedda Gabler and Lorca's Yerma display...</td>\n",
-       "      <td>180</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2577 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      author genre                                               text  \\\n",
-       "0          1     a  Racism is still a problem within our society t...   \n",
-       "1          1     b  Official statistics are those produced by eith...   \n",
-       "2          1     c  Since the fourteenth century the practice of m...   \n",
-       "3          1     d  Much more reproductive choice is now available...   \n",
-       "4          2     a  Victorian notions of women's madness were larg...   \n",
-       "...      ...   ...                                                ...   \n",
-       "2572    6998     a  E. Warwick Slinn describes dramatic monologue ...   \n",
-       "2573    6998     b  Hugh Blair voices an attack on the practices o...   \n",
-       "2574    6998     c  'The first thing to remember about Donne,' wri...   \n",
-       "2575    6998     d  Susan Wiseman calculated that the latest possi...   \n",
-       "2576    6998     e  Ibsen's Hedda Gabler and Lorca's Yerma display...   \n",
-       "\n",
-       "      sentence_count  \n",
-       "0                 48  \n",
-       "1                 46  \n",
-       "2                 56  \n",
-       "3                 67  \n",
-       "4                 58  \n",
-       "...              ...  \n",
-       "2572             149  \n",
-       "2573              75  \n",
-       "2574             115  \n",
-       "2575             116  \n",
-       "2576             180  \n",
-       "\n",
-       "[2577 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['sentence_count'] = sentence_counts\n",
+    "# df['sentence_count'] = sentence_counts\n",
     "\n",
-    "authors = set(df['author'])\n",
-    "sentence_count = sum(sentence_counts)\n",
-    "min_sentence_count = min(sentence_counts)\n",
-    "max_sentence_count = max(sentence_counts)\n",
-    "avg_sentence_count = sentence_count / len(sentence_counts)\n",
+    "# authors = set(df['author'])\n",
+    "# sentence_count = sum(sentence_counts)\n",
+    "# min_sentence_count = min(sentence_counts)\n",
+    "# max_sentence_count = max(sentence_counts)\n",
+    "# avg_sentence_count = sentence_count / len(sentence_counts)\n",
     "\n",
-    "print(f'Author count: {len(authors)}')\n",
-    "print(f'Sentence count: {sentence_count}')\n",
-    "print(f'Minimum sentence count: {min_sentence_count}')\n",
-    "print(f'Maximum sentence count: {max_sentence_count}')\n",
-    "print(f'Average sentence count: {avg_sentence_count}')\n",
+    "# print(f'Author count: {len(authors)}')\n",
+    "# print(f'Sentence count: {sentence_count}')\n",
+    "# print(f'Minimum sentence count: {min_sentence_count}')\n",
+    "# print(f'Maximum sentence count: {max_sentence_count}')\n",
+    "# print(f'Average sentence count: {avg_sentence_count}')\n",
     "\n",
-    "df"
+    "# df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "academic-knife",
+   "id": "successful-firmware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moved-universal",
+   "id": "suited-optics",
    "metadata": {},
    "source": [
     "### References\n",
