--- a/notebooks/develop/2021-03-03-gc-profile-benchmarking.ipynb
+++ b/notebooks/develop/2021-03-03-gc-profile-benchmarking.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "brown-illness",
+   "id": "eight-undergraduate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "becoming-graph",
+   "id": "amended-argument",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,37 +50,37 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "thermal-christopher",
+   "id": "theoretical-dividend",
    "metadata": {},
    "outputs": [],
    "source": [
     "# pospca_extractor = POSPCAExtractor(25, 10)\n",
     "# pospca_profile = MahalanobisProfile(pospca_extractor)\n",
     "\n",
-    "heuristics_extractor = HeuristicExtractor(1)\n",
+    "heuristics_extractor = HeuristicExtractor(4)\n",
     "heuristics_profile = MahalanobisProfile(heuristics_extractor)\n",
     "\n",
-    "pos2gram_extractor = POS2GramExtractor(paragraph_length=1)\n",
-    "pos2gram_profile = MahalanobisProfile(pos2gram_extractor)\n",
+    "# pos2gram_extractor = POS2GramExtractor(paragraph_length=1)\n",
+    "# pos2gram_profile = MahalanobisProfile(pos2gram_extractor)\n",
     "\n",
-    "combined_extractor = ConcatExtractor(heuristics_extractor, pos2gram_extractor)\n",
-    "combined_profile = MahalanobisProfile(combined_extractor)\n",
+    "# combined_extractor = ConcatExtractor(heuristics_extractor, pos2gram_extractor)\n",
+    "# combined_profile = MahalanobisProfile(combined_extractor)\n",
     "\n",
-    "profiles = [heuristics_profile, pos2gram_profile, combined_profile]\n",
-    "profile_names = ['Heuristics', 'POS Bigrams', 'Combined Heuristics/Bigrams']"
+    "profiles = [heuristics_profile]\n",
+    "profile_names = ['Heuristics']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sitting-bridge",
+   "id": "stone-solomon",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|##########| 2/2 [00:12<00:00,  6.43s/it]\n"
+      "100%|##########| 10/10 [08:03<00:00, 48.31s/it]\n"
      ]
     },
     {
@@ -106,81 +106,84 @@
        "      <th></th>\n",
        "      <th>flag</th>\n",
        "      <th>Heuristics</th>\n",
-       "      <th>POS Bigrams</th>\n",
-       "      <th>Combined Heuristics/Bigrams</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>0.330821</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.960581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.894906</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.865407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.897627</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.822791</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.353465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.090379</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>657</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.360285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>658</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.235129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>659</th>\n",
+       "      <td>True</td>\n",
+       "      <td>0.261533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>True</td>\n",
+       "      <td>0.269341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>661</th>\n",
+       "      <td>True</td>\n",
+       "      <td>0.243151</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>662 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    flag  Heuristics  POS Bigrams  Combined Heuristics/Bigrams\n",
-       "0  False    0.330821          0.0                          0.0\n",
-       "1   True    0.894906          0.0                          0.0\n",
-       "2   True    0.897627          0.0                          0.0\n",
-       "3   True    0.000000          0.0                          0.0\n",
-       "4   True    0.000000          0.0                          0.0\n",
-       "5   True    0.000000          0.0                          0.0\n",
-       "6   True    0.000000          0.0                          0.0\n",
-       "7   True    0.000000          0.0                          0.0"
+       "      flag  Heuristics\n",
+       "0    False    0.960581\n",
+       "1     True    0.865407\n",
+       "2     True    0.822791\n",
+       "3     True    0.353465\n",
+       "4     True    0.090379\n",
+       "..     ...         ...\n",
+       "657   True    0.360285\n",
+       "658   True    0.235129\n",
+       "659   True    0.261533\n",
+       "660   True    0.269341\n",
+       "661   True    0.243151\n",
+       "\n",
+       "[662 rows x 2 columns]"
       ]
      },
      "execution_count": 4,
@@ -189,17 +192,16 @@
     }
    ],
    "source": [
-    "benchmark_results = benchmark_profiles(grouped_train_df, profiles,\n",
-    "                                       show_loading=True, names=profile_names,\n",
-    "                                       authors_per_sample=2, samples=2)\n",
+    "benchmark_results = benchmark_profiles(grouped_valid_df, profiles,\n",
+    "                                       show_loading=True, names=profile_names)\n",
     "\n",
     "benchmark_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "flexible-logic",
+   "execution_count": 5,
+   "id": "beneficial-arrow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,8 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "consolidated-hybrid",
+   "execution_count": 6,
+   "id": "bibliographic-lancaster",
    "metadata": {},
    "outputs": [
     {
@@ -236,26 +238,22 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>flag</th>\n",
-       "      <th>pospca</th>\n",
-       "      <th>heuristics</th>\n",
+       "      <th>Heuristics</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -263,11 +261,9 @@
        "      <th>3</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -275,61 +271,55 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>978</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>979</th>\n",
-       "      <td>True</td>\n",
+       "      <th>657</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>980</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>981</th>\n",
-       "      <td>True</td>\n",
+       "      <th>658</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>982</th>\n",
+       "      <th>659</th>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>661</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>983 rows × 3 columns</p>\n",
+       "<p>662 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      flag  pospca  heuristics\n",
-       "0    False    True        True\n",
-       "1     True    True        True\n",
-       "2     True    True        True\n",
-       "3     True    True        True\n",
-       "4     True    True        True\n",
-       "..     ...     ...         ...\n",
-       "978   True    True        True\n",
-       "979   True    True        True\n",
-       "980   True    True        True\n",
-       "981   True    True        True\n",
-       "982   True    True        True\n",
+       "      flag  Heuristics\n",
+       "0    False       False\n",
+       "1     True       False\n",
+       "2     True        True\n",
+       "3     True        True\n",
+       "4     True        True\n",
+       "..     ...         ...\n",
+       "657   True        True\n",
+       "658   True        True\n",
+       "659   True        True\n",
+       "660   True        True\n",
+       "661   True        True\n",
        "\n",
-       "[983 rows x 3 columns]"
+       "[662 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,10 +330,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "amino-fleece",
+   "execution_count": 8,
+   "id": "forty-maintenance",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>balanced accuracy</th>\n",
+       "      <th>specificity</th>\n",
+       "      <th>sensitivity (recall)</th>\n",
+       "      <th>precision</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Heuristics</th>\n",
+       "      <td>0.784977</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.944954</td>\n",
+       "      <td>0.991974</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            balanced accuracy  specificity  sensitivity (recall)  precision\n",
+       "Heuristics           0.784977        0.625              0.944954   0.991974"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "positives_selection = benchmark_flags['flag']\n",
     "negatives_selection = np.logical_not(benchmark_flags['flag'])\n",
@@ -363,14 +402,18 @@
     "\n",
     "balanced_accuracy = (sensitivity + specificity) / 2\n",
     "\n",
-    "train_benchmarks = pd.DataFrame(data=[balanced_accuracy, specificity, sensitivity, precision],\n",
-    "             index=['balanced accuracy', 'specificity', 'sensitivity (recall)', 'precision']).T"
+    "train_benchmarks = pd.DataFrame(\n",
+    "    data=[balanced_accuracy, specificity, sensitivity, precision],\n",
+    "    index=['balanced accuracy', 'specificity', 'sensitivity (recall)',\n",
+    "           'precision']).T\n",
+    "\n",
+    "train_benchmarks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cardiovascular-corrections",
+   "id": "sweet-belfast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "exempt-language",
+   "id": "brazilian-space",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "taken-cedar",
+   "id": "suspected-curve",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "valuable-gallery",
+   "id": "heavy-gasoline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "defensive-click",
+   "id": "superb-relationship",
    "metadata": {
     "collapsed": false,
     "jupyter": {
