Remove pycache and other bad directories

--- a/notebooks/develop/2021-03-03-gc-profile-benchmarking.ipynb
+++ b/notebooks/develop/2021-03-03-gc-profile-benchmarking.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eight-undergraduate",
+   "id": "amber-indonesia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "from notebooks.benchmarking import benchmark_profiles  # noqa\n",
     "from notebooks import pipes\n",
     "from notebooks.profiles import MahalanobisProfile\n",
-    "from notebooks.feature_extractors import HeuristicExtractor, POS2GramExtractor, ConcatExtractor\n",
+    "from notebooks.feature_extractors import HeuristicExtractor, OldPOS2GramExtractor, ConcatExtractor\n",
     "\n",
     "init_data_dir(project_root)\n",
     "\n",
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "amended-argument",
+   "id": "final-pioneer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,37 +50,37 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "theoretical-dividend",
+   "id": "overall-knight",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pospca_extractor = POSPCAExtractor(25, 10)\n",
+    "# pospca_extractor = OldPOSPCAExtractor(25, 10)\n",
     "# pospca_profile = MahalanobisProfile(pospca_extractor)\n",
     "\n",
     "heuristics_extractor = HeuristicExtractor(4)\n",
     "heuristics_profile = MahalanobisProfile(heuristics_extractor)\n",
     "\n",
-    "# pos2gram_extractor = POS2GramExtractor(paragraph_length=1)\n",
-    "# pos2gram_profile = MahalanobisProfile(pos2gram_extractor)\n",
+    "pos2gram_extractor = OldPOS2GramExtractor(paragraph_length=1, best=20)\n",
+    "pos2gram_profile = MahalanobisProfile(pos2gram_extractor)\n",
     "\n",
-    "# combined_extractor = ConcatExtractor(heuristics_extractor, pos2gram_extractor)\n",
-    "# combined_profile = MahalanobisProfile(combined_extractor)\n",
+    "combined_extractor = ConcatExtractor(heuristics_extractor, pos2gram_extractor)\n",
+    "combined_profile = MahalanobisProfile(combined_extractor)\n",
     "\n",
-    "profiles = [heuristics_profile]\n",
-    "profile_names = ['Heuristics']"
+    "profiles = [heuristics_profile, pos2gram_profile, combined_profile]\n",
+    "profile_names = ['Heuristics', 'POS Bigrams', 'Combined']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "stone-solomon",
+   "id": "hybrid-distance",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|##########| 10/10 [08:03<00:00, 48.31s/it]\n"
+      "100%|##########| 20/20 [13:51<00:00, 41.56s/it]\n"
      ]
     },
     {
@@ -106,84 +106,108 @@
        "      <th></th>\n",
        "      <th>flag</th>\n",
        "      <th>Heuristics</th>\n",
+       "      <th>POS Bigrams</th>\n",
+       "      <th>Combined</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>0.960581</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.134598</td>\n",
+       "      <td>0.999421</td>\n",
+       "      <td>0.998544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.865407</td>\n",
+       "      <td>0.497050</td>\n",
+       "      <td>0.966469</td>\n",
+       "      <td>0.959002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.822791</td>\n",
+       "      <td>0.192381</td>\n",
+       "      <td>0.868973</td>\n",
+       "      <td>0.706363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.353465</td>\n",
+       "      <td>0.484490</td>\n",
+       "      <td>0.831687</td>\n",
+       "      <td>0.509005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.090379</td>\n",
+       "      <td>0.622277</td>\n",
+       "      <td>0.223367</td>\n",
+       "      <td>0.004089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>657</th>\n",
+       "      <th>206</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.360285</td>\n",
+       "      <td>0.597925</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>658</th>\n",
+       "      <th>207</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.235129</td>\n",
+       "      <td>0.653880</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>659</th>\n",
+       "      <th>208</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.261533</td>\n",
+       "      <td>0.987519</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>660</th>\n",
+       "      <th>209</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.269341</td>\n",
+       "      <td>0.699435</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>661</th>\n",
+       "      <th>210</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.243151</td>\n",
+       "      <td>0.901942</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>662 rows × 2 columns</p>\n",
+       "<p>211 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      flag  Heuristics\n",
-       "0    False    0.960581\n",
-       "1     True    0.865407\n",
-       "2     True    0.822791\n",
-       "3     True    0.353465\n",
-       "4     True    0.090379\n",
-       "..     ...         ...\n",
-       "657   True    0.360285\n",
-       "658   True    0.235129\n",
-       "659   True    0.261533\n",
-       "660   True    0.269341\n",
-       "661   True    0.243151\n",
+       "     flag  Heuristics  POS Bigrams  Combined\n",
+       "0    True    0.134598     0.999421  0.998544\n",
+       "1    True    0.497050     0.966469  0.959002\n",
+       "2    True    0.192381     0.868973  0.706363\n",
+       "3    True    0.484490     0.831687  0.509005\n",
+       "4    True    0.622277     0.223367  0.004089\n",
+       "..    ...         ...          ...       ...\n",
+       "206  True    0.597925     1.000000  1.000000\n",
+       "207  True    0.653880     1.000000  1.000000\n",
+       "208  True    0.987519     1.000000  1.000000\n",
+       "209  True    0.699435     1.000000  1.000000\n",
+       "210  True    0.901942     1.000000  1.000000\n",
        "\n",
-       "[662 rows x 2 columns]"
+       "[211 rows x 4 columns]"
       ]
      },
      "execution_count": 4,
@@ -193,7 +217,7 @@
    ],
    "source": [
     "benchmark_results = benchmark_profiles(grouped_valid_df, profiles,\n",
-    "                                       show_loading=True, names=profile_names)\n",
+    "                                       show_loading=True, names=profile_names, samples=20, authors_per_sample=5)\n",
     "\n",
     "benchmark_results"
    ]
@@ -201,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "beneficial-arrow",
+   "id": "answering-surgeon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bibliographic-lancaster",
+   "id": "russian-annual",
    "metadata": {},
    "outputs": [
     {
@@ -239,26 +263,36 @@
        "      <th></th>\n",
        "      <th>flag</th>\n",
        "      <th>Heuristics</th>\n",
+       "      <th>POS Bigrams</th>\n",
+       "      <th>Combined</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -266,57 +300,71 @@
        "      <th>4</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>657</th>\n",
+       "      <th>206</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>658</th>\n",
+       "      <th>207</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>659</th>\n",
+       "      <th>208</th>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>660</th>\n",
+       "      <th>209</th>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>661</th>\n",
+       "      <th>210</th>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>662 rows × 2 columns</p>\n",
+       "<p>211 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      flag  Heuristics\n",
-       "0    False       False\n",
-       "1     True       False\n",
-       "2     True        True\n",
-       "3     True        True\n",
-       "4     True        True\n",
-       "..     ...         ...\n",
-       "657   True        True\n",
-       "658   True        True\n",
-       "659   True        True\n",
-       "660   True        True\n",
-       "661   True        True\n",
+       "     flag  Heuristics  POS Bigrams  Combined\n",
+       "0    True        True        False     False\n",
+       "1    True        True        False     False\n",
+       "2    True        True        False      True\n",
+       "3    True        True         True      True\n",
+       "4    True        True         True      True\n",
+       "..    ...         ...          ...       ...\n",
+       "206  True        True        False     False\n",
+       "207  True        True        False     False\n",
+       "208  True       False        False     False\n",
+       "209  True        True        False     False\n",
+       "210  True       False        False     False\n",
        "\n",
-       "[662 rows x 2 columns]"
+       "[211 rows x 4 columns]"
       ]
      },
      "execution_count": 6,
@@ -330,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "forty-maintenance",
+   "execution_count": 7,
+   "id": "cultural-trial",
    "metadata": {},
    "outputs": [
     {
@@ -364,21 +412,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Heuristics</th>\n",
-       "      <td>0.784977</td>\n",
-       "      <td>0.625</td>\n",
-       "      <td>0.944954</td>\n",
-       "      <td>0.991974</td>\n",
+       "      <td>0.676396</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.852792</td>\n",
+       "      <td>0.960000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>POS Bigrams</th>\n",
+       "      <td>0.545323</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.233503</td>\n",
+       "      <td>0.793103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Combined</th>\n",
+       "      <td>0.516679</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.461929</td>\n",
+       "      <td>0.919192</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            balanced accuracy  specificity  sensitivity (recall)  precision\n",
-       "Heuristics           0.784977        0.625              0.944954   0.991974"
+       "             balanced accuracy  specificity  sensitivity (recall)  precision\n",
+       "Heuristics            0.676396     0.500000              0.852792   0.960000\n",
+       "POS Bigrams           0.545323     0.857143              0.233503   0.793103\n",
+       "Combined              0.516679     0.571429              0.461929   0.919192"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "sweet-belfast",
+   "id": "intermediate-karaoke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "brazilian-space",
+   "id": "utility-novel",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "suspected-curve",
+   "id": "allied-gospel",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "heavy-gasoline",
+   "id": "agricultural-secret",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "superb-relationship",
+   "id": "fewer-enemy",
    "metadata": {
     "collapsed": false,
     "jupyter": {
